--- a/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
+++ b/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
@@ -653,6 +653,7 @@
   .navBackBtn {
     text-align: right;
     font-size: 20px;
+    padding: 15px;
   }
   .sideTabsStrip {
     display: flex;
